// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cropper Component Snapshot matches snapshot for mobile 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#f5f3ef",
        "padding": 16,
        "width": 750,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      {
        "color": "#181b1b",
        "fontSize": 32,
        "fontWeight": "700",
        "marginBottom": 16,
      }
    }
  >
    Crop Photo
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "marginBottom": 16,
      }
    }
  >
    <View
      onMoveShouldSetResponder={[Function]}
      onMoveShouldSetResponderCapture={[Function]}
      onResponderEnd={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderReject={[Function]}
      onResponderRelease={[Function]}
      onResponderStart={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onStartShouldSetResponderCapture={[Function]}
      style={
        {
          "backgroundColor": "#181b1b",
          "borderRadius": 12,
          "elevation": 4,
          "height": 718,
          "overflow": "hidden",
          "position": "relative",
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.12,
          "shadowRadius": 8,
          "width": 718,
        }
      }
    >
      <Image
        onLoad={[Function]}
        resizeMode="contain"
        source={
          {
            "uri": "data:image/jpeg;base64,mockImageData",
          }
        }
        style={
          [
            {
              "position": "absolute",
            },
            {
              "height": 0,
              "transform": [
                {
                  "translateX": 0,
                },
                {
                  "translateY": 0,
                },
              ],
              "width": 0,
            },
          ]
        }
      />
      <View
        style={
          {
            "borderColor": "#547fab",
            "borderWidth": 2,
            "height": 718,
            "pointerEvents": "none",
            "position": "absolute",
            "width": 718,
          }
        }
      />
    </View>
  </View>
  <View
    style={
      {
        "marginBottom": 16,
        "paddingHorizontal": 12,
        "width": "100%",
      }
    }
  >
    <View
      onMoveShouldSetResponder={[Function]}
      onMoveShouldSetResponderCapture={[Function]}
      onResponderEnd={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderReject={[Function]}
      onResponderRelease={[Function]}
      onResponderStart={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onStartShouldSetResponderCapture={[Function]}
      style={
        {
          "paddingHorizontal": 12,
          "paddingVertical": 16,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "#c8ced0",
            "borderRadius": 999,
            "height": 8,
            "justifyContent": "center",
            "position": "relative",
          }
        }
      >
        <View
          style={
            [
              {
                "backgroundColor": "#547fab",
                "borderRadius": 999,
                "height": "100%",
              },
              {
                "width": 416.4,
              },
            ]
          }
        />
        <View
          style={
            [
              {
                "backgroundColor": "#547fab",
                "borderRadius": 999,
                "elevation": 4,
                "height": 28,
                "marginLeft": -14,
                "position": "absolute",
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 4,
                  "width": 0,
                },
                "shadowOpacity": 0.12,
                "shadowRadius": 8,
                "top": -10,
                "width": 28,
              },
              {
                "left": 416.4,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "column",
        "gap": 12,
        "marginTop": 20,
        "width": "100%",
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#547fab",
          "borderRadius": 8,
          "flexDirection": "row",
          "gap": 8,
          "justifyContent": "center",
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 16,
          "width": "100%",
        }
      }
      testID="primary-button"
    >
      <Text
        style={
          {
            "marginRight": 4,
          }
        }
      >
        crop
      </Text>
      <Text
        style={
          {
            "color": "#fff",
            "fontSize": 16,
            "fontWeight": "700",
          }
        }
      >
        Crop
      </Text>
    </View>
    <View
      style={
        {
          "height": 12,
        }
      }
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#ece7df",
          "borderColor": "#c8ced0",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 8,
          "justifyContent": "center",
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 16,
          "width": "100%",
        }
      }
      testID="cancel-button"
    >
      <Text
        style={
          {
            "marginRight": 4,
          }
        }
      >
        times
      </Text>
      <Text
        style={
          {
            "color": "#181b1b",
            "fontSize": 16,
            "fontWeight": "600",
          }
        }
      >
        Cancel
      </Text>
    </View>
  </View>
</View>
`;

exports[`Cropper Component Snapshot matches snapshot for web 1`] = `
<View
  style={
    {
      "backgroundColor": "#f5f3ef",
      "padding": 16,
      "width": 750,
    }
  }
>
  <Text
    style={
      {
        "color": "#181b1b",
        "fontSize": 32,
        "fontWeight": "700",
        "marginBottom": 16,
      }
    }
  >
    Crop Photo
  </Text>
  <div
    style={
      {
        "backgroundColor": "#181b1b",
        "borderRadius": 12,
        "height": 718,
        "marginBottom": 16,
        "overflow": "hidden",
        "position": "relative",
        "width": 718,
      }
    }
  />
  <View
    style={
      {
        "marginBottom": 16,
        "paddingHorizontal": 12,
        "width": "100%",
      }
    }
  >
    <View
      onMoveShouldSetResponder={[Function]}
      onMoveShouldSetResponderCapture={[Function]}
      onResponderEnd={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderReject={[Function]}
      onResponderRelease={[Function]}
      onResponderStart={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onStartShouldSetResponderCapture={[Function]}
      style={
        {
          "paddingHorizontal": 12,
          "paddingVertical": 16,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "#c8ced0",
            "borderRadius": 999,
            "height": 8,
            "justifyContent": "center",
            "position": "relative",
          }
        }
      >
        <View
          style={
            [
              {
                "backgroundColor": "#547fab",
                "borderRadius": 999,
                "height": "100%",
              },
              {
                "width": 416.4,
              },
            ]
          }
        />
        <View
          style={
            [
              {
                "backgroundColor": "#547fab",
                "borderRadius": 999,
                "elevation": 4,
                "height": 28,
                "marginLeft": -14,
                "position": "absolute",
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 4,
                  "width": 0,
                },
                "shadowOpacity": 0.12,
                "shadowRadius": 8,
                "top": -10,
                "width": 28,
              },
              {
                "left": 416.4,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "column",
        "gap": 12,
        "marginTop": 20,
        "width": "100%",
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          [
            [
              {
                "alignItems": "center",
                "backgroundColor": "#547fab",
                "borderRadius": 8,
                "flexDirection": "row",
                "gap": 8,
                "justifyContent": "center",
                "paddingHorizontal": 16,
                "paddingVertical": 16,
                "width": "100%",
              },
              undefined,
            ],
            {
              "opacity": 1,
            },
          ],
          {
            "alignItems": "center",
            "backgroundColor": "#547fab",
            "borderRadius": 8,
            "flexDirection": "row",
            "gap": 8,
            "justifyContent": "center",
            "opacity": 1,
            "paddingHorizontal": 16,
            "paddingVertical": 16,
            "width": "100%",
          },
        ]
      }
      testID="primary-button"
    >
      <Text
        style={
          {
            "marginRight": 4,
          }
        }
      >
        crop
      </Text>
      <Text
        style={
          {
            "color": "#fff",
            "fontSize": 16,
            "fontWeight": "700",
          }
        }
      >
        Crop
      </Text>
    </View>
    <View
      style={
        {
          "height": 12,
        }
      }
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          [
            [
              {
                "alignItems": "center",
                "backgroundColor": "#ece7df",
                "borderColor": "#c8ced0",
                "borderRadius": 8,
                "borderWidth": 1,
                "flexDirection": "row",
                "gap": 8,
                "justifyContent": "center",
                "paddingHorizontal": 16,
                "paddingVertical": 16,
                "width": "100%",
              },
              undefined,
            ],
            {
              "opacity": 1,
            },
          ],
          {
            "alignItems": "center",
            "backgroundColor": "#ece7df",
            "borderColor": "#c8ced0",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "gap": 8,
            "justifyContent": "center",
            "opacity": 1,
            "paddingHorizontal": 16,
            "paddingVertical": 16,
            "width": "100%",
          },
        ]
      }
      testID="cancel-button"
    >
      <Text
        style={
          {
            "marginRight": 4,
          }
        }
      >
        times
      </Text>
      <Text
        style={
          {
            "color": "#181b1b",
            "fontSize": 16,
            "fontWeight": "600",
          }
        }
      >
        Cancel
      </Text>
    </View>
  </View>
</View>
`;
